Bower 0.8 (????-??-??)
======================
* Look up email addresses using notmuch address
* Archive a thread/message with '.' (mark read, remove "inbox" tag)

Bower 0.7 (2016-03-28)
======================
This release requires notmuch 0.16 or above (notmuch 0.19+ is recommended)
and gpgme. Consider updating your bower.conf to make use of multiple accounts.

* Support for multiple accounts.
* PGP/MIME support.
* Use notmuch insert command instead of notmuch-deliver.
* Make use of notmuch search --exclude=all option.
* Make use of notmuch show --entire-thread=false option.
* Represent excluded messages (with replies) in thread view.
* Fix ambiguity between ~dDATE and search alias beginning with ~d.
* Do not hide the 'inbox' tag.
* Run poll_notify command when polling finds new messages.
* Accept mailto URI at To: prompt.
* Add 'E' edit current message as template for new message.
* Add '~' key to initiate limit prompt populated with "~".
* Wrap long header lines in pager.
* Link with libpanelw, not libpanel.
* Bug fixes and minor improvements.
* Compatibility with newer Mercury compilers.

Bower 0.6 (2014-05-01)
======================
This release requires notmuch 0.15 or above.  Users who access notmuch
via ssh must update their configuration (see bower.conf.sample).

* Use notmuch 0.15 date parser instead of GNU date.
* Use notmuch reply --reply-to=(sender|all).
* Support single ~d DATE syntax.
* Use the terminal's default background colour.
* Configurable colours.
* Use shell-style word splitting of all commands.
* Automatically perform extra round of shell-quoting for ssh commands.
* Run open part/URL command in background if suffixed by '&'.
* Leave curses when running open part/URL command in foreground.
* Configurable open URL and open part commands.
* Configurable polling period in index view.
* Configurable Drafts/Sent maildir folders in ~/.notmuch-config.
* Fold/unfold header lines when composing messages.
* Parse address lists per RFC 5322.