@@ -1,1 +1,2 @@
 Peter Wang <novalazy@gmail.com>
+Stian Soiland-Reyes <stain@apache.org>
